# protean-cosmosdb

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/protean_cosmosdb/: __init__.py  cosmosdb.py
tests/: conformance_conftest.py  test_cosmosdb.py
